css/_base.css
/* ===================================================
STYLES FOR ROOT ELEMENTs
=====================================================*/

html {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-rendering: optimizeLegibility;
}

body {
  overflow-x: hidden;
  background-color: var(--main-color);
  font-family: var(--font-regular), sans-serif;
}

html,
body {
  width: 100%;
  overflow-x: hidden;
  position: relative;
}

h1 {
  font-size: 56px;
}

/*FONT SIZEZ*/
.-fs-xxl {
  font-size: clamp(64px, 14vw, 300px);
}

/*COLORS*/

.-c-nuclear {
  color: var(--nuclear);
}

.-c-acid {
  color: var(--acid);
}

.-c-main {
  color: var(--main-color);
}

/*MISC*/

.-font-alternative {
  font-family: var(--font-alternative);
  font-style: italic;
}

.-uppercase {
  text-transform: uppercase;
}

.-acided {
  background-color: var(--acid);
  color: var(--main-color);
}

.-inverted {
  background-color: var(--nuclear);
  color: var(--main-color);
}

.-fade-in {
  transition: all 320ms ease-in-out;
  transform: translateY(132px);
  opacity: 0;
}

.-reveal {
  transform: translateY(0);
  opacity: 1;
}

/*ANIMATIONS*/

@keyframes blink {
	0% {opacity: 0}
	49%{opacity: 0}
	50% {opacity: 1}
}

@keyframes spin {
  from {
      transform:rotate(0deg);
  }
  to {
      transform:rotate(360deg);
  }
}


@keyframes dwall {
  0% {transform:translateY(0);}
  49% {transform:translateY(320px);}
  100% { transform:translateY(0);}
}

